<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宝宝智力方程</string>
    <string name="seepic">宝宝看图</string>
    <string name="babydraw">宝宝画板</string>
    <string name="test">智力测试</string>
    <string name="game">亲子游戏</string>
    <string name="nutrition">宝宝营养</string>
    <string name="guide">成长向导</string>
    <string name="baike">育儿百科</string>
    <string name="yuerzhinan">育儿指南</string>
    <string name="tools">应用工具</string>
    <string name="zhi_li_fang_cheng">智力方程</string>
    <string name="grow_advice">成长建议</string>
    <string name="app_tools">应用工具</string>
    <string name="left_right_brain">左右脑开发</string>
    <string name="intlligence_control_table">智力对照表</string>
    <string name="guide_one">0-1岁</string>
    <string name="animal">动物</string>
    <string name="fruit">水果</string>
    <string name="vegetable">蔬菜</string>
    <string name="transport">交通</string>

    <string name="game_desc">游戏描述</string>
    
    <!-- 关于 -->
    <string name="menu_net_update">联网升级</string>
    <string name="menu_share2friends">推荐好友</string>
    <string name="share2friends_title">向好友推荐应用</string>
    <string name="share2friends_content">宝宝智力方程是一款很不错的早教应用，集智力开发、益智游戏、育儿百科等多项功能，内容很丰富，好东西要与朋友来分享，你也试试吧！</string>
    <string name="menu_submit_proposal">提交建议</string>
    <string name="menu_support_us">表扬一下</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_advice">提提建议</string>
    <string name="about_office_web">官网：</string>
    <string name="about_office_web_url">babystudy.diandian.com</string>
    <string name="about_mail">邮箱：</string>
    <string name="about_mail_url">babyseepic@gmail.com</string>
    <string name="about_copyright">懿轩工作室</string>
    <string name="about_description">"　　专为0-6岁儿童开发的早教软件，汇集了智力开发、益智游戏、智力测试、营养保健、育儿百科等功能，为使初为父母的您提供360度的指导，使您能快速了解、掌握科学的教养方法，让宝宝健康快乐的成长！
        如果您有任何疑问与建议请与我们联系！"</string>
    <string name="help_singal">"?"</string>
    
    <!-- 宝宝画板 -->
    <string name="dialog_save_pic_title">请输入要保存的名称</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="pic_type">.jpg</string>
    <string name="pic_view">预览宝宝作品</string>
    <string name="pic_empty">没有找到宝宝的作品\n赶快让您的宝宝来画画吧！</string>
    <string name="menu_color">画笔颜色</string>
    <string name="menu_color_canvas">背景颜色</string>
    <string name="menu_emboss">浮雕</string>
    <string name="menu_blur">羽化</string>
    <string name="menu_erase">橡皮檫</string>
    <string name="menu_save_pic">保存</string>
    <string name="menu_save_pic_list">宝宝作品</string>

    <!-- 智力测试 -->
    <string name="test_next">下一题</string>
    <string name="test_up">上一题</string>
    <string name="test_show_result">看结果</string>
    <string name="test_save">收藏</string>
    <string name="test_option">%1$s(%2$d分)</string>
    <string name="test_score">您宝宝的得分为：%1$s分\n(%2$s)</string>
    <string name="test_untest_finish_tip">您的宝宝还有几项没测试呢，测试完成后才能看结果呦！</string>
    <string name="test_analysis">"%1$s题主要%2$s\n应得%3$d分(实得%4$d分)"</string>
    
    <!-- 后台提醒 -->
    <string name="notif_test">宝宝又长大了，来测试一下宝宝的智力吧</string>
    <string name="notif_game">周末了，陪孩子做做游戏吧！</string>
    <string name="notif_seepic">宝宝又长大了，来宝宝看图看看吧！</string>
    <string name="notif_nutrion">周末了，给宝宝做顿好吃的吧！</string>
    <string name="notif_draw">宝宝画板功能很好用，让宝宝大显身手吧</string>
    <string name="notif_yuerbaike">来育儿百科看看吧，帮您解决育儿中的疑惑！</string>
    <string name="notif_yuerzhinan">常来阅读育儿指南，为您健康育儿保驾护航！</string>
    <string name="notif_left_right_brain">关注宝宝左右脑开发，让您的宝宝更聪明！</string>
    <string name="notif_intlligence_control_table">智力测试表可以帮助您检测宝宝智力发展状态，助您检测早教效果</string>
    
    <!-- 宝宝营养 -->
    <string name="nutrition_tab_1">1-36月</string>
    <string name="nutrition_tab_2">经典食谱</string>
    <string name="nutrition_tab_3">饮食指导</string>
    

    <!-- 应用工具 -->
    <string name="father_height">宝宝身高</string>
    <string name="mather_height">宝宝身高</string>
    <string name="boy">男孩</string>
    <string name="girl">女孩</string>
    <string name="baby_height_tips">宝宝身高小常识\n
		宝宝的身高受遗传影响较大，所以从父母的身高可以一定程度上预测宝宝未来所能达到的身高，但是遗传因素对宝宝身高的影响不是绝对的，因为最终身高还受到其他五种因素的影响。\n
		性别：足月新生儿的平均身长，男孩比女孩略胜一筹，差距约2厘米左右。这种性别差距在整个儿童时期都可能存在，直至青春早期。\n
		营养：营养充足的宝宝长得较快。当宝宝营养不能满足骨骼生长需要时，身高增长的速度就会减慢。 \n
		睡眠：睡眠充足的宝宝长得快。因为宝宝的生长受到脑垂体分泌的生长激素的调节，而人体生长激素的分泌在睡眠时量最高。 \n
		运动：运动能促进宝宝的血液循环，改善骨骼的营养，使骨骼生长加速，骨质致密，促进身高的增长。 \n
		疾病：一般急性病影响体重，慢性病影响身高。 环境：一般而言，我国北方的孩子普遍比南方的孩子要高些；\n
		经济条件好、文化水平高的地区，孩子也长得较高。 \n
		小提示：宝宝的身高及测量方法 身高是衡量宝宝体格发育的一个非常重要的指标，它是指从头顶到足底的全身长度。\n
		3岁以下的宝宝由于不会站立，或站不安稳，测量身高(又称身长)应取仰卧位测量。 \n
		让宝宝仰卧在桌面上，两下肢并拢并伸直，用书本固定头部并与桌面垂直，用笔作直线标记，然后用书抵住宝宝脚板并与桌面垂直用笔画线标记，用皮尺测量两线之间的长度，即为宝宝的身高。</string>
    
    <!-- 市场推广 -->
    <string name="goto_market_dialog_title">鼓励一下</string>
    <string name="goto_market_dialog_content">如果觉得"宝宝智力方程"给您提供了帮助，不妨去应用市场表扬一下我们吧~</string>
    <string name="goto_market_dialog_btn_ok">表扬一下</string>
    <string name="goto_market_dialog_btn_cancel">以后再说</string>
    <string name="goto_market_fail">打开应用市场失败，请检查您的应用市场！</string>
    
    <!-- 软件更新相关 -->
    <string name="download_file_error_dlg_title">"没有存储空间"</string>
    <string name="download_file_error_dlg_msg">"无法下载，请释放部分手机空间，然后重试。"</string>
    <string name="download_failed_generic_dlg_title">"下载失败"</string>
    <string name="download_start">"开始下载"</string>
    <string name="download_failed_generic_msg">"下载失败"</string>
    <string name="download_success_generic_msg">"下载完成"</string>
    <string name="download_apk_success_install_msg">"下载完成,点击安装"</string>
    <string name="downloading_apk_msg">"正在下载%1$s %2$d"</string>
    <string name="download_no_sdcard_dlg_title">"没有 SD 卡"</string>
    
    <string name="update_back">返回</string>
    <string name="update_find_new_version_title">新版本提示</string>
    <string name="update_find_new_version_message">版本号： <b>%1$s</b>\n\n%2$s</string>
    <string name="update_find_new_version_ok">立即升级</string>
    <string name="update_find_new_version_cancel">以后再说</string>
    <string name="update_last_version_title">升级提示</string>
    <string name="update_last_version_message">您当前安装的已是最新版本！</string>
    <string name="update_progress_title">请稍等</string>
    <string name="update_progress_download_ini">正在获取版本信息</string>
    <string name="update_progress_download_apk">正在下载最新版本</string>
    <string name="update_download_finish">宝宝智力方程新版下载完成了，赶快去安装吧！</string>
    <string name="update_is_running">正在进行中，请稍候...</string>
    <string name="connect_server_failed">联网失败，请稍后重试</string>
    <string name="update_no_sdcard">抱歉，没有找到存储卡</string>
    <string name="update_mkdirs_failed">创建下载目录失败，请稍后重试</string>

</resources>
