<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_advice"
        android:icon="@drawable/popup_menu_item_advice"
        android:orderInCategory="0"
        android:title="@string/menu_advice"/>
    <item
        android:id="@+id/menu_update"
        android:icon="@drawable/popup_menu_item_update"
        android:orderInCategory="1"
        android:title="@string/menu_net_update"/>
    <item
        android:id="@+id/menu_share2friend"
        android:icon="@drawable/popup_menu_item_friend"
        android:orderInCategory="2"
        android:title="@string/menu_share2friends"/>
    <item
        android:id="@+id/menu_support_us"
        android:icon="@drawable/popup_menu_item_friend"
        android:orderInCategory="3"
        android:title="@string/menu_support_us"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/popup_menu_item_about"
        android:orderInCategory="4"
        android:title="@string/menu_about"/>
    <!--
         <item
        android:id="@+id/menu_settings"
        android:orderInCategory="2"
        android:title="@string/menu_settings"/>
    -->

</menu>