<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="0.8"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="30dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/seepic"
            style="@style/MainItem2"
            android:layout_marginRight="20dip"
            android:text="@string/seepic" />

        <TextView
            android:id="@+id/brush"
            style="@style/MainItem2"
            android:text="@string/babydraw" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dip"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/test"
            style="@style/MainItem2"
            android:layout_marginRight="20dip"
            android:text="@string/test" />

        <TextView
            android:id="@+id/left_right_brain"
            style="@style/MainItemNew"
            android:text="@string/left_right_brain" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dip"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/intlligence_control_table"
            style="@style/MainItemNew"
            android:layout_marginRight="20dip"
            android:text="@string/intlligence_control_table" />

        <TextView
            android:id="@+id/nutrition"
            style="@style/MainItem2"
            android:text="@string/nutrition" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dip"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/game"
            style="@style/MainItem2"
            android:layout_marginRight="20dip"
            android:text="@string/game" />

        <TextView
            android:id="@+id/yuerbaike"
            style="@style/MainItem2"
            android:text="@string/baike"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>