<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_2_dip"
        android:paddingTop="@dimen/dimen_2_dip" >

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#00000000"
            android:drawableTop="@drawable/icon_pre"
            android:text="@string/test_up"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/dimen_14_dip" />

        <TextView
            android:id="@+id/txt_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#00000000"
            android:drawableTop="@drawable/icon_select_question"
            android:gravity="center_horizontal"
            android:text="100/100"
            android:textColor="#ffffff00"
            android:textSize="@dimen/dimen_14_dip" />

        <Button
            android:id="@+id/btn_show_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#00000000"
            android:drawableTop="@drawable/icon_mode_answer"
            android:text="@string/test_show_result"
            android:visibility="gone"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/dimen_14_dip" />

        <Button
            android:id="@+id/btn_favor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#00000000"
            android:drawableTop="@drawable/icon_favor1"
            android:text="收藏此题"
            android:visibility="gone"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/dimen_14_dip" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#00000000"
            android:drawableTop="@drawable/icon_next"
            android:text="@string/test_next"
            android:textColor="@color/btn_text_color"
            android:textSize="@dimen/dimen_14_dip" />
    </LinearLayout>

    <include
        android:id="@+id/test_question_panel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_panel"
        layout="@layout/test_question_panel" />
    <include
        android:id="@+id/test_result_panel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_panel"
        android:visibility="gone"
        layout="@layout/test_result" />
    <!-- <LinearLayout -->
    <!-- android:id="@id/main_panel" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="fill_parent" -->
    <!-- android:layout_above="@id/bottom_panel" /> -->

</RelativeLayout>