<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="30dip"
        android:drawableLeft="@drawable/ic_launcher"
        android:gravity="left|center_vertical"
        android:text="@string/hello"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/seepic"
                    style="@style/MainItem2"
                    android:layout_marginRight="20dip"
                    android:text="宝宝看图" />

                <TextView
                    android:id="@+id/brush"
                    style="@style/MainItem2"
                    android:layout_marginRight="10dip"
                    android:text="宝宝画板" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/test"
                    style="@style/MainItem2"
                    android:layout_marginRight="20dip"
                    android:text="智力测试" />

                <TextView
                    android:id="@+id/game"
                    style="@style/MainItem2"
                    android:layout_marginRight="10dip"
                    android:text="亲子游戏" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/guide"
                    style="@style/MainItem2"
                    android:layout_marginRight="20dip"
                    android:text="成长向导" />

                <TextView
                    android:id="@+id/nutrition"
                    style="@style/MainItem2"
                    android:layout_marginRight="10dip"
                    android:text="宝宝营养" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/book"
                    style="@style/MainItem2"
                    android:layout_marginRight="20dip"
                    android:text="智力方程" />

                <TextView
                    android:id="@+id/tools"
                    style="@style/MainItem2"
                    android:layout_marginRight="10dip"
                    android:text="0-1岁"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="bottom|center_horizontal"
            android:visibility="gone"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/menu_net_udpate"
                style="@style/MainMenuItem"
                android:drawableTop="@drawable/popup_menu_item_update"
                android:text="@string/menu_net_update" />

            <TextView
                android:id="@+id/menu_share2friends"
                style="@style/MainMenuItem"
                android:drawableTop="@drawable/popup_menu_item_friend"
                android:text="@string/menu_share2friends" />

            <TextView
                android:id="@+id/menu_submit_proposal"
                style="@style/MainMenuItem"
                android:drawableTop="@drawable/popup_menu_item_advice"
                android:gravity="center"
                android:text="@string/menu_submit_proposal" />

            <TextView
                android:id="@+id/main_about"
	                style="@style/MainMenuItem"
                android:drawableTop="@drawable/popup_menu_item_about"
                android:text="@string/menu_about" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>